@@ -1,21 +1,30 @@
+/**
+ * SPDX-FileCopyrightText: (c) 2025 EasyBase
+ * SPDX-License-Identifier: LGPL-2.1-or-later
+ */
+
 package com.easybase.api.data.engine.dto.mapper;
 
-import java.util.Collections;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Component;
-
+import com.easybase.api.data.engine.dto.AttributeDto;
 import com.easybase.api.data.engine.dto.CollectionDto;
 import com.easybase.common.api.dto.mapper.BaseMapper;
+import com.easybase.core.data.engine.entity.Attribute;
 import com.easybase.core.data.engine.entity.Collection;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Stream;
 
 import lombok.RequiredArgsConstructor;
 
+import org.springframework.stereotype.Component;
+
+/**
+ * @author Akhash R
+ */
 @Component
 @RequiredArgsConstructor
 public class CollectionMapper implements BaseMapper<Collection, CollectionDto> {
-
-	private final AttributeMapper _attributeMapper;
 
 	@Override
 	public CollectionDto toDto(Collection collection) {
@@ -29,11 +38,20 @@ public class CollectionMapper implements BaseMapper<Collection, CollectionDto> {
 				setName(collection.getName());
 				setCreatedAt(collection.getCreatedAt());
 				setUpdatedAt(collection.getUpdatedAt());
-				setAttributes(collection.getAttributes() == null
-						? Collections.emptyList()
-						: collection.getAttributes().stream()
-								.map(_attributeMapper::toDto)
-								.collect(Collectors.toList()));
+
+				if (collection.getAttributes() == null) {
+					setAttributes(Collections.emptyList());
+				}
+				else {
+					List<Attribute> attributes = collection.getAttributes();
+
+					Stream<Attribute> attributesStream = attributes.stream();
+
+					setAttributes(
+						attributesStream.map(
+							_attributeMapper::toDto
+						).toList());
+				}
 			}
 		};
 	}
@@ -47,13 +65,26 @@ public class CollectionMapper implements BaseMapper<Collection, CollectionDto> {
 		return new Collection() {
 			{
 				setName(collectionDto.getName());
-				setAttributes(collectionDto.getAttributes() == null
-						? Collections.emptyList()
-						: collectionDto.getAttributes().stream()
-								.map(_attributeMapper::toEntity)
-								.collect(Collectors.toList()));
+
+				if (collectionDto.getAttributes() == null) {
+					setAttributes(Collections.emptyList());
+				}
+				else {
+					List<AttributeDto> attributeDtos =
+						collectionDto.getAttributes();
+
+					Stream<AttributeDto> attributeDtosStream =
+						attributeDtos.stream();
+
+					setAttributes(
+						attributeDtosStream.map(
+							_attributeMapper::toEntity
+						).toList());
+				}
 			}
 		};
 	}
+
+	private final AttributeMapper _attributeMapper;
 
 }
